# Smart-Manager

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  smart_manager.json  smart_manager_config.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Code-Quality-Check.yaml  Release.yml  Run-Tests.yaml
SmartManager/: main.py
SmartManager/Api/: __init__.py  api.py  databaseinfo.py
SmartManager/App/: app.py  command.py  controller.py  datahandler.py  interface.py
SmartManager/Database/: driver.py  localdriver.py  sqlitedriver.py
devdocs/: Deployment_Guidelines.md  Project_Structure.md  Requirements.md  Version_Guidelines.md  common_code_guidelines.md
docs/: download.html  index.html
docs/metadata_copies/: CONTRIBUTING.html  LICENSE.txt
docs/prism/: prism.css  prism.js
docs/scripts/: download.js  linkbreaker.js  otherversion.js
docs/stylesheets/: style.css
resource/: info.txt
src/: Smart_Manager.json  main.py
src/App/: __init__.py  app.py
src/DataHandler/: database.py
src/SmartManager/: app.py
src/app/: __init__.py  app.py  commands.py  datahandler.py  eventhandler.py  input_handler.py  metadata.py
src/controller/: __init__.py  controllers.py
src/datahandler/: __init__.py  datahandler.py
src/smartmanager/: app.py
tests/: conftest.py  mocking.py  test_app.py  test_command.py  test_controller.py  test_demo.py  test_init.py  test_main.py  test_mocking.py
