[tool.poetry]
name = "Smart-Manager"
version = "2.0.0-Beta"
description = "Smart Manager is a Python command-line application designed to securely store and manage passwords and authentication-related data."
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
